<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableRow>
        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_string"
            android:textSize="36sp"
            android:layout_span="2"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/teamA_textview"
            android:layout_width="175sp"
            android:layout_height="wrap_content"
            android:text="@string/teamA_title_string"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/teamB_textview"
            android:layout_width="175sp"
            android:layout_height="wrap_content"
            android:text="@string/teamB_title_string"
            android:textSize="28sp" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/teamA_score_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num10"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/teamB_score_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num10b"
            android:textSize="28sp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/teanA_Inc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/increase_string" />

        <Button
            android:id="@+id/teamB_Inc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_string" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/teamA_Dec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrease_string"
            tools:layout_editor_absoluteX="271dp"
            tools:layout_editor_absoluteY="362dp" />

        <Button
            android:id="@+id/teamB_Dec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrease_string"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="362dp" />
    </TableRow>
    <TableRow>
        <RadioGroup
            android:id="@+id/roundingRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ID_by1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/round_no1" />

            <RadioButton
                android:id="@+id/ID_by5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_no5" />

            <RadioButton
                android:id="@+id/ID_by10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_no10" />


        </RadioGroup>

    </TableRow>
</TableLayout>
